# viewport-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: publish.yml
examples/: runtime_jobs.rs
examples/eframe_input_controllers/: main.rs  viewport_callback.rs
examples/eframe_lighting_shadows/: main.rs  viewport_callback.rs
examples/eframe_minimal/: main.rs  viewport_callback.rs
examples/eframe_multi_viewport/: main.rs  multi_viewport_callback.rs
examples/eframe_primitives/: main.rs  viewport_callback.rs
examples/eframe_showcase/: geometry.rs  gizmo_helpers.rs  hdr_viewport_callback.rs  main.rs  multi_viewport_callback.rs  shared.rs  showcase_01_basic.rs  showcase_02_scene_graph.rs  showcase_03_ground_plane.rs  showcase_03_performance.rs  showcase_04_interaction.rs  showcase_05_advanced_rendering.rs  showcase_05_materials_and_visibility.rs  showcase_06_post_process.rs  showcase_07_normal_maps.rs  showcase_08_shadows.rs  showcase_09_annotation.rs  showcase_10_camera_tools.rs  showcase_11_lights.rs  showcase_12_scalar_fields.rs  showcase_13_multi_viewport.rs  showcase_14_isolines.rs  showcase_15_point_clouds.rs  showcase_16_streamlines.rs  showcase_17_volume.rs  showcase_18_clip_volumes.rs  showcase_19_matcap.rs  showcase_20_face_attributes.rs  showcase_21_textures.rs  showcase_22_parameterization.rs  showcase_23_ground_plane.rs  showcase_23_performance.rs  showcase_24_backface_policy.rs  showcase_24_surface_appearance.rs  showcase_25_surface_vectors.rs  showcase_26_volume_mesh.rs  showcase_27_auxiliary.rs  showcase_27_camera_framing.rs  showcase_28_curve_network_quantities.rs  showcase_29_depth_composite_images.rs  (+30 more)
examples/eframe_showcase/assets/: character.glb
examples/eframe_showcase/shaders/: hdr_blit.wgsl
examples/eframe_testing/: main.rs  viewport_callback.rs
examples/eframe_viewport/: main.rs  viewport_callback.rs
examples/gtk4_viewport/: main.rs  viewport_bridge.rs
examples/iced_viewport/: main.rs  viewport_widget.rs
examples/plugins/: buoy.wgsl  buoy_plugin.rs  wave.wgsl  wave_plugin.rs
examples/qt_viewport/: .qmlls.ini  Cargo.toml  build.rs
examples/qt_viewport/cpp/: image_provider.cpp  image_provider.h
examples/qt_viewport/qml/: main.qml
examples/qt_viewport/src/: main.rs  viewport_backend.rs  viewport_bridge.rs
examples/runtime_resources/: main.rs
examples/slint_viewport/: main.rs  viewport_bridge.rs
examples/winit_hdr/: main.rs
examples/winit_minimal/: main.rs
examples/winit_multi_viewport/: main.rs
examples/winit_primitives/: main.rs
examples/winit_showcase/: annotation_demo.rs  geometry.rs  main.rs  showcase_advanced.rs  showcase_interaction.rs  showcase_normal_maps.rs  showcase_performance.rs  showcase_post_process.rs  showcase_scene_graph.rs  showcase_shadows.rs
examples/winit_viewport/: main.rs
src/: error.rs  lib.rs
src/camera/: animator.rs  camera.rs  frustum.rs  mod.rs  track.rs  turntable.rs  view_preset.rs
src/geometry/: bvh.rs  cap_geometry.rs  implicit.rs  isoline.rs  marching_cubes.rs  mod.rs  primitives.rs
src/interaction/: annotation.rs  clip_plane.rs  gizmo.rs  mod.rs  pick_mask.rs  picking.rs  selection.rs  snap.rs  sub_object.rs
src/interaction/input/: action.rs  action_frame.rs  binding.rs  context.rs  controller.rs  defaults.rs  event.rs  mod.rs  mode.rs  preset.rs  query.rs  viewport_binding.rs  viewport_input.rs
src/interaction/manipulation/: mod.rs  session.rs  solvers.rs  types.rs
src/interaction/widgets/: box_widget.rs  cylinder.rs  disk.rs  line_probe.rs  mod.rs  plane.rs  polyline_widget.rs  sphere.rs  spline.rs
src/quantities/: intrinsic_vectors.rs  mod.rs  one_forms.rs  polyline_vectors.rs  tangent_frames.rs  volume_mesh_vectors.rs
src/renderer/: hidden_tests.rs  indirect.rs  mod.rs  paths.rs  picking.rs  prepare.rs  render.rs  shader_hashes.rs  shadow_debug_stats.rs  shadows.rs  stats.rs  types.rs
src/renderer/types/: clip.rs  debug.rs  frame.rs  items.rs  lighting.rs  mod.rs  overlay.rs  postprocess.rs
src/resources/: colormap_data.rs  colourmap_data.rs  decal.rs  dyn_res.rs  environment.rs  extra_impls.rs  font.rs  gpu_marching_cubes.rs  highlight.rs  implicit.rs  init.rs  instancing.rs  matcap_data.rs  mesh_store.rs  meshes.rs  mod.rs  overlay_shape.rs  overlay_text.rs  overlays.rs  postprocess.rs  scatter_volume.rs  scivis.rs  skin.rs  sparse_volume.rs  textures.rs  types.rs  volume_mesh.rs  volumes.rs
src/resources/scivis/: gaussian_splat.rs  glyph.rs  image.rs  mod.rs  path_tracing.rs  point_cloud.rs  polyline.rs  sprite.rs  tube.rs
src/runtime/: camera_follow.rs  context.rs  debug_draw.rs  events.rs  gpu_plugin.rs  guide.rs  jobs.rs  mod.rs  mode.rs  output.rs  plugin.rs  resources.rs  skeleton.rs  snapshot.rs  timestep.rs
src/runtime/plugins/: animation.rs  constraint.rs  mod.rs  physics_lite.rs  skeleton_plugin.rs
src/runtime/systems/: manipulation.rs  (+2 more)
src/scene/: aabb.rs  material.rs  mod.rs  scatter_volume.rs  scene.rs  spatial_index.rs  traits.rs
src/shaders/: axes_overlay.wgsl  backdrop_blur.wgsl  bloom_blur.wgsl  bloom_threshold.wgsl  compute_filter.wgsl  contact_shadow.wgsl  cull.wgsl  debug_vis.wgsl  decal.wgsl  decal_exclude.wgsl  depth_blit.wgsl  dof.wgsl  dyn_res_upscale.wgsl  fxaa.wgsl  gaussian_splat.wgsl  gaussian_splat_sort.wgsl  gizmo.wgsl  glyph.wgsl  glyph_outline_mask.wgsl  grid.wgsl  ground_plane.wgsl  image_slice.wgsl  implicit.wgsl  implicit_outline_mask.wgsl  lic_advect.wgsl  lic_surface.wgsl  mc_classify.wgsl  mc_generate.wgsl  mc_prefix_sum.wgsl  mc_surface.wgsl  mc_wireframe.wgsl  mesh.wgsl  mesh_instanced.wgsl  mesh_instanced_oit.wgsl  mesh_oit.wgsl  mesh_skinned.wgsl  oit_composite.wgsl  outline.wgsl  outline_composite.wgsl  outline_edge.wgsl  (+42 more)
src/widgets/: axes_indicator.rs  mod.rs
tests/: clip_volume.rs  headless.rs  runtime_camera_commands.rs  runtime_events.rs  runtime_resources.rs
(+12 files in other folders)
