[package]
name = "viewport-lib"
version = "0.14.0"
edition = "2024"
description = "3D viewport rendering library"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/grimandgreedy/viewport-lib"
homepage = "https://github.com/grimandgreedy/viewport-lib"
documentation = "https://docs.rs/viewport-lib"
keywords = ["3d", "viewport", "wgpu", "rendering", "visualization"]
categories = ["graphics", "rendering", "visualization"]
rust-version = "1.85"
publish = true
exclude = ["examples/"]

[dependencies]
wgpu = { version = "27.0", features = ["metal", "vulkan"] }
glam = { version = "=0.30.10", features = ["bytemuck"] }
bytemuck = { version = "1.25", features = ["derive"] }
parry3d = "0.26"
bitflags = "2"
rayon = "1"
fontdue = "0.9"
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "glam/serde", "bitflags/serde"]

[dev-dependencies]
iced = { version = "0.14", features = ["wgpu"] }
eframe = { version = "=0.33.3", default-features = false, features = ["wgpu", "default_fonts", "x11", "wayland"] }
winit = "0.30"
pollster = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "iced-viewport"
path = "examples/iced_viewport/main.rs"

[[example]]
name = "winit-viewport"
path = "examples/winit_viewport/main.rs"

[[example]]
name = "winit-minimal"
path = "examples/winit_minimal/main.rs"


[[example]]
name = "eframe-minimal"
path = "examples/eframe_minimal/main.rs"

[[example]]
name = "eframe-testing"
path = "examples/eframe_testing/main.rs"

[[example]]
name = "eframe-primitives"
path = "examples/eframe_primitives/main.rs"

[[example]]
name = "eframe-viewport"
path = "examples/eframe_viewport/main.rs"

[[example]]
name = "eframe-input-controllers"
path = "examples/eframe_input_controllers/main.rs"

[[example]]
name = "eframe-showcase"
path = "examples/eframe_showcase/main.rs"

[[example]]
name = "winit-multi-viewport"
path = "examples/winit_multi_viewport/main.rs"
